add PoC for mass and spawning new object

--- a/public/TornadoVR/index.html
+++ b/public/TornadoVR/index.html
@@ -43,7 +43,7 @@
 	}
 </script>
 
-<script id="fragment_shader3" type="x-shader/x-fragment">
+<script id="fragment_shader3" type="x-shxader/x-fragment">
 	uniform float time;
 	uniform vec2 resolution;
 	varying vec2 vUv;
@@ -171,7 +171,7 @@
 </script>
 <!-- Code to display an information button and box when clicked. -->
 <script src="js/jquery-2.1.0.js" ></script>
-<script src="js/jquery-ui.js"></script>
+<script src="js/jquery-ui.js"></script>	
 
 
 </div>
