Checkpoint particle tail

--- a/public/TornadoVR/index.html
+++ b/public/TornadoVR/index.html
@@ -34,7 +34,7 @@
 	uniform vec3 uBaseColor;
 		
 	uniform vec3 uDirLightPos;
-	uniform vec3 uDirLightColor;.0
+	uniform vec3 uDirLightColor;
 		
 	uniform vec3 uAmbientLightColor;
 		
