--- a/public/road_scene.html
+++ b/public/road_scene.html
@@ -45,6 +45,22 @@
         solver.addParticle(particle);
       }
 
+      const createCube = (geometry, material) => {
+        const cube = new THREE.Mesh( geometry, material );
+        cube.position = new THREE.Vector3(0, 0, 0);
+        cube.t = 0;
+        const rigidbody = new RigidBody({
+          mass: 5,
+          velocity: new THREE.Vector3(0, 0, 0),
+          position: cube.position,
+          _forceAcc: new THREE.Vector3(0, 0, 0),
+        });
+        cube.rigidbodyRef = rigidbody;
+        scene.add(cube);
+        cubes.push(cube);
+        solver.addRigidBody(rigidbody);
+      }
+      
       camera.position.z = 100;
       camera.position.y = 100;
 
