Refractor tornadoVR in progress

--- a/public/TornadoVR/index.html
+++ b/public/TornadoVR/index.html
@@ -29,6 +29,7 @@
 <script src="js/loaders/TextureLoader.js"></script>
 <script src="js/loaders/ImageLoader.js"></script>
 <script src="js/loaders/Cache.js"></script>
+<script src="js/solver.js"></script>
 
 <script id="fragment_shaderTail" type="x-shader/x-fragment">
 	uniform vec3 uBaseColor;
